--- a/app/src/main/res/layout/rv_installed_module.xml
+++ b/app/src/main/res/layout/rv_installed_module.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tool="http://schemas.android.com/tools"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
